--- a/content/resources/en/index.mdx
+++ b/content/resources/en/index.mdx
@@ -8,7 +8,7 @@ Logos is a sovereign decentralised technology stack that realises the latent cyp
 
 This combination establishes a new kind of territory in cyberspace: a supra-jurisdictional “cypherstate” that can deploy stable, corruption-resistant institutions to anyone, anywhere.
 
-The system’s technical foundation is a hybrid microkernel-microservices architecture that initially combines three existing core protocols:
+The system's technical foundation is a hybrid microkernel-microservices architecture that initially combines three existing core protocols:
 
 - **Communication**: Anonymous communication networks for state-adversary-resistant messaging
 
