--- a/content/resources/fr/how-to-contribute.mdx
+++ b/content/resources/fr/how-to-contribute.mdx
@@ -1,7 +1,17 @@
 ---
-title: Comment contribuer
-description: Un guide pour contribuer au projet Logos.
+title: How to contribute
+description: A guide to contributing to the Logos project.
 locale: fr
 ---
 
-TBD
+Welcome to Logos! We're thrilled to have you join us in shaping the decentralized web. Whether you're a developer, writer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
+
+To get started, you can submit your ideas or projects through the [proposal form](/proposals).
+
+You can also explore tailored guides on how to contribute based on your skills:
+
+- [For Developers](/resources/developers)
+- [For Writers](/resources/writers)
+- [For Event Organizers](/resources/event-organizers)
+- [For Translators](/resources/translators)
+- [For Designers](/resources/designers)
