feat(event-organisers): add new resource pages for event organisers in multiple languages and update related links

--- a/content/resources/fr/event-organisers.mdx
+++ b/content/resources/fr/event-organisers.mdx
@@ -1,7 +1,7 @@
 ---
-title: Event Organizers
-description: A guide to contributing to Logos as an event organizer.
-locale: en
+title: Event Organisers
+description: A guide to contributing to Logos as an event organiser.
+locale: fr
 ---
 
 If you're interested in organizing events for Logos, you can submit a proposal via the [proposal form](/proposals).
