--- a/content/resources/ko/event-organisers.mdx
+++ b/content/resources/ko/event-organisers.mdx
@@ -1,6 +1,6 @@
 ---
-title: Event Organizers
-description: A guide to contributing to Logos as an event organizer.
+title: Event Organisers
+description: A guide to contributing to Logos as an event organiser.
 locale: ko
 ---
 
