--- a/content/resources/en/event-organisers.mdx
+++ b/content/resources/en/event-organisers.mdx
@@ -1,7 +1,7 @@
 ---
-title: Event Organizers
-description: A guide to contributing to Logos as an event organizer.
-locale: fr
+title: Event Organisers
+description: A guide to contributing to Logos as an event organiser.
+locale: en
 ---
 
 If you're interested in organizing events for Logos, you can submit a proposal via the [proposal form](/proposals).
