--- a/content/resources/fr/how-to-contribute.mdx
+++ b/content/resources/fr/how-to-contribute.mdx
@@ -4,7 +4,7 @@ description: A guide to contributing to the Logos project.
 locale: fr
 ---
 
-Welcome to Logos! We're thrilled to have you join us in shaping the decentralized web. Whether you're a developer, writer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
+Welcome to Logos! We're thrilled to have you join us in shaping the decentralised web. Whether you're a developer, writer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
 
 To get started, you can submit your ideas or projects through the [proposal form](/proposals).
 
@@ -12,6 +12,6 @@ You can also explore tailored guides on how to contribute based on your skills:
 
 - [For Developers](/resources/developers)
 - [For Writers](/resources/writers)
-- [For Event Organizers](/resources/event-organizers)
+- [For Event Organisers](/resources/event-organisers)
 - [For Translators](/resources/translators)
 - [For Designers](/resources/designers)
