fix: correct spelling of "organising", "localisation", and "decentralisation" in resource documents

--- a/content/resources/en/event-organisers.mdx
+++ b/content/resources/en/event-organisers.mdx
@@ -4,14 +4,14 @@ description: A guide to contributing to Logos as an event organiser.
 locale: en
 ---
 
-If you're interested in organizing events for Logos, you can submit a proposal via the [proposal form](/proposals).
+If you're interested in organising events for Logos, you can submit a proposal via the [proposal form](/proposals).
 
 <br />
 
 ## Community Events & Circles
 
-- **Host Local Meetups**: Organize Logos community gatherings in your city
-- **Online Workshops**: Conduct educational sessions about decentralization
+- **Host Local Meetups**: Organise Logos community gatherings in your city
+- **Online Workshops**: Conduct educational sessions about decentralisation
 - **Conference Representation**: Represent Logos at blockchain conferences and events
 - **Partnership Events**: Collaborate with other Web3 projects for joint events
 
