--- a/content/resources/en/index.mdx
+++ b/content/resources/en/index.mdx
@@ -22,7 +22,7 @@ The architecture enables competitive governance, where institutions must earn su
 
 As an open-source project, Logos is not just a collection of individuals. We come together by choice to address shared challenges, advance our principles, and create systems that benefit the whole through open contributions.
 
-Fo a deeper look, dive into our code.
+For a deeper look, dive into our code.
 
 <br />
 <br />
