--- a/content/resources/en/translators.mdx
+++ b/content/resources/en/translators.mdx
@@ -8,10 +8,10 @@ If you're interested in translating Logos, you can submit a proposal via the [pr
 
 <br />
 
-## Translation & Localization
+## Translation & Localisation
 
 - **Documentation Translation**: Translate technical docs into your native language
-- **Website Localization**: Help localize logos.co and related sites
+- **Website Localisation**: Help localise logos.co and related sites
 - **Community Content**: Translate blog posts and educational materials
 - **UI/UX Translation**: Translate application interfaces and user guides
 
