Translate Resources section to Korean

--- a/content/resources/ko/event-organisers.mdx
+++ b/content/resources/ko/event-organisers.mdx
@@ -1,25 +1,25 @@
 ---
-title: Event Organisers
-description: A guide to contributing to Logos as an event organiser.
+title: 이벤트 기획자
+description: 이벤트 기획자로서 Logos에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-If you're interested in organizing events for Logos, you can submit a proposal via the [proposal form](/proposals).
+Logos 커뮤니티를 위한 이벤트를 기획하고 싶으시다면, [제안서 양식](/proposals)을 통해 아이디어를 제출해주세요.
 
 <br />
 
-## Community Events & Circles
+## 커뮤니티 이벤트 및 모임
 
-- **Host Local Meetups**: Organize Logos community gatherings in your city
-- **Online Workshops**: Conduct educational sessions about decentralization
-- **Conference Representation**: Represent Logos at blockchain conferences and events
-- **Partnership Events**: Collaborate with other Web3 projects for joint events
+- **지역 모임**: 거주 도시에서 Logos 커뮤니티 모임 주최
+- **온라인 워크숍**: 탈중앙화를 주제로 한 교육 세션 진행
+- **컨퍼런스 참여**: 블록체인 컨퍼런스 및 행사에서 Logos 대표로 참여
+- **파트너십 이벤트**: 다른 Web3 프로젝트와 공동 이벤트 기획 및 협력
 
 <br />
 
-## Event Planning Support:
+## 이벤트 기획 지원 내용
 
-- Marketing materials and swag provided
-- Technical speakers can be arranged
-- Budget support available for qualifying events
-- Post-event reporting and community feedback
+- 마케팅 자료 및 기념품(swag) 제공
+- 기술 연사 섭외 지원
+- 자격 요건을 충족하는 이벤트에 대한 예산 지원
+- 이벤트 후 결과 보고 및 커뮤니티 피드백 수렴
