--- a/content/resources/ko/how-to-contribute.mdx
+++ b/content/resources/ko/how-to-contribute.mdx
@@ -1,17 +1,17 @@
 ---
-title: How to contribute
-description: A guide to contributing to the Logos project.
+title: 기여하는 방법
+description: Logos 프로젝트에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-Welcome to Logos! We're thrilled to have you join us in shaping the decentralised web. Whether you're a developer, writer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
+Logos에 오신 것을 환영합니다! 탈중앙화된 웹을 함께 만들어가는 여정에 동참해주셔서 기쁩니다. 개발자, 작가 등 어떤 전문성을 가졌든, Logos에 참여하고 기여할 수 있는 방법은 다양합니다.
 
-To get started, you can submit your ideas or projects through the [proposal form](/proposals).
+가장 먼저, [제안서 양식](/proposals)을 통해 여러분의 아이디어나 프로젝트를 제출해보세요.
 
-You can also explore tailored guides on how to contribute based on your skills:
+또는, 아래 전문 분야별 가이드에서 각자에게 맞는 기여 방법을 찾아보세요.
 
-- [For Developers](/resources/developers)
-- [For Writers](/resources/writers)
-- [For Event Organisers](/resources/event-organisers)
-- [For Translators](/resources/translators)
-- [For Designers](/resources/designers)
+- [개발자](/resources/developers)
+- [작가](/resources/writers)
+- [이벤트 기획자](/resources/event-organisers)
+- [번역가](/resources/translators)
+- [디자이너](/resources/designers)
