--- a/content/resources/ko/translators.mdx
+++ b/content/resources/ko/translators.mdx
@@ -1,25 +1,25 @@
 ---
-title: Translators
-description: A guide to contributing to Logos as a translator.
+title: 번역가
+description: 번역가로서 Logos에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-If you're interested in translating Logos, you can submit a proposal via the [proposal form](/proposals).
+Logos 콘텐츠 번역에 참여하고 싶으시다면, [제안서 양식](/proposals)을 통해 제안서를 제출해주세요.
 
 <br />
 
-## Translation & Localization
+## 번역 및 현지화 분야
 
-- **Documentation Translation**: Translate technical docs into your native language
-- **Website Localization**: Help localize logos.co and related sites
-- **Community Content**: Translate blog posts and educational materials
-- **UI/UX Translation**: Translate application interfaces and user guides
+- **기술 문서 번역**: 기술 문서를 각자의 모국어로 번역
+- **웹사이트 현지화**: logos.co 및 관련 사이트 현지화
+- **커뮤니티 콘텐츠**: 블로그 게시물 및 교육 자료 번역
+- **UI/UX 번역**: 애플리케이션 인터페이스 및 사용자 가이드 번역
 
 <br />
 
-## Languages We Need:
+## 번역이 필요한 언어
 
-- Spanish, French, German, Portuguese
-- Chinese (Simplified/Traditional), Japanese, Korean
-- Arabic, Hindi, Russian
-- And many others!
+- 스페인어, 프랑스어, 독일어, 포르투갈어
+- 중국어(간체/번체), 일본어, 한국어
+- 아랍어, 힌디어, 러시아어
+- 그 외 다양한 언어
