--- a/content/resources/ko/writers.mdx
+++ b/content/resources/ko/writers.mdx
@@ -1,26 +1,26 @@
 ---
-title: Writers
-description: A guide to contributing to Logos as a writer.
+title: 작가
+description: 작가로서 Logos에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-If you're interested in writing for Logos, you can submit a proposal via the [proposal form](/proposals).
+Logos와 관련된 글을 쓰고 싶으시다면, [제안서 양식](/proposals)을 통해 아이디어를 제출해주세요.
 
 <br />
 
-## Blog Writing for Logos Press Engine
+## Logos Press Engine 블로그 기고
 
-- **Articles**: Write about blockchain technology, decentralization, and privacy
-- **Project Updates**: Share progress updates and milestone achievements
-- **Educational Content**: Create tutorials and explainer articles for the community
-- **Industry Analysis**: Provide insights on the broader Web3 ecosystem
+- **기술 기사**: 블록체인, 탈중앙화, 프라이버시 관련 주제의 글 작성
+- **프로젝트 업데이트**: 프로젝트 진행 상황 및 주요 성과 공유
+- **교육 콘텐츠**: 커뮤니티를 위한 튜토리얼 및 해설 기사 작성
+- **산업 분석**: Web3 생태계 전반에 대한 깊이 있는 분석 제공
 
 <br />
 
-## Submission Process:
+## 기고 절차
 
-1. Pitch your article idea via the contact form
-2. Include a brief outline and target audience
-3. Articles should be 800-2000 words with proper citations
-4. Follow our editorial guidelines for tone and style
-5. After review, the article will be published on press.logos.co
+1. 문의 양식을 통해 기사 아이디어를 제안해주세요.
+2. 간략한 개요와 예상 독자층을 포함해주세요.
+3. 기사는 출처를 명확히 밝히고 800-2,000 단어 분량으로 작성해주세요.
+4. Logos 편집 가이드라인의 톤과 스타일을 준수해야 합니다.
+5. 검토 완료 후 기사는 press.logos.co에 게시됩니다.
