--- a/content/resources/ko/designers.mdx
+++ b/content/resources/ko/designers.mdx
@@ -1,14 +1,14 @@
 ---
-title: Designers
-description: A guide to contributing to Logos as a designer.
+title: 디자이너
+description: 디자이너로서 Logos에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-If you're interested in designing for Logos, you can submit a proposal via the [proposal form](/proposals).
+Logos 디자인에 기여하고 싶으시다면, [제안서 양식](/proposals)을 통해 아이디어를 제출해주세요.
 
 <br />
 
-- **UI/UX Design**: Create user interface designs and user experience improvements
-- **Brand Assets**: Design logos, illustrations, and marketing materials
-- **Infographics**: Create visual explanations of complex technical concepts
-- **Video Content**: Produce educational and promotional videos
+- **UI/UX 디자인**: 사용자 인터페이스(UI) 디자인 및 사용자 경험(UX) 개선
+- **브랜드 자산**: 로고, 일러스트, 마케팅 자료 디자인
+- **인포그래픽**: 복잡한 기술 개념을 시각적으로 설명하는 콘텐츠 제작
+- **비디오 콘텐츠**: 교육 및 홍보용 비디오 제작
