--- a/content/resources/ko/developers.mdx
+++ b/content/resources/ko/developers.mdx
@@ -1,43 +1,43 @@
 ---
-title: Developers
-description: A guide to contributing to Logos as a developer.
+title: 개발자
+description: 개발자로서 Logos에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-Logos is a passionately open-source, value-aligned community that is the product of our collective efforts. We build, learn, experiment, and succeed together.
+Logos는 가치를 공유하는 열정적인 오픈소스 커뮤니티로, 우리 모두의 공동의 노력으로 만들어갑니다. 우리는 함께 구축하고, 배우고, 실험하며 성공을 이룹니다.
 
-As an open-source project, Logos is not just a collection of individual contributors – it’s a civic body. We organise voluntarily to solve problems, uphold values, and build institutions that serve the common good: individual freedom and collective prosperity.
+오픈소스 프로젝트인 Logos는 단순한 개인 기여자들의 모임이 아닌 하나의 시민 공동체입니다. 우리는 자발적으로 모여 문제를 해결하고, 가치를 지키며, 공동선(개인의 자유와 집단의 번영)을 위한 제도를 세웁니다.
 
-Our culture is based on meritocracy, shared ownership, common responsibility, and transparent governance. Contributions to the community – code, content, ideas – are recognised and rewarded through roles that enable deeper participation in the network.
+우리의 문화는 능력주의, 공동 소유, 공동 책임, 투명한 거버넌스를 기반으로 합니다. 코드, 콘텐츠, 아이디어 등 커뮤니티에 대한 모든 기여는 네트워크에 더 깊이 참여할 수 있는 역할을 통해 인정받고 보상받습니다.
 
-If you're interested in contributing to Logos as a developer, you can submit a proposal via the [proposal form](/proposals).
-
-<br />
-
-## Code Contributions
-
-- **Frontend Development**: Build user interfaces using React, TypeScript, and modern web technologies
-- **Mobile Development**: Develop mobile applications for iOS and Android
-- **Infrastructure**: Contribute to DevOps, CI/CD pipelines, and deployment automation
-- **Protocol Development**: Contribute to core protocol implementations in Nim, Go, or Rust
-- **Smart Contracts**: Help build and audit Logos-based contracts for the Logos ecosystem in Solidity, EVM, or Wasm
+개발자로서 Logos에 기여하고 싶으시다면, [제안서 양식](/proposals)을 통해 아이디어를 제출해주세요.
 
 <br />
 
-## Getting Started
+## 코드 기여 분야
 
-1. **Explore the Codebase**: Browse our [GitHub repositories](https://github.com/logos-co) to understand the project structure
-2. **Set Up Development Environment**: Follow the README instructions in each repository
-3. **Find Good First Issues**: Look for issues labeled "good first issue" or "help wanted"
-4. **Join Developer Discussions**: Participate in technical discussions on our Discord #hq channels
+- **프론트엔드 개발**: React, TypeScript 등 최신 웹 기술을 사용한 사용자 인터페이스 개발
+- **모바일 개발**: iOS 및 Android 모바일 애플리케이션 개발
+- **인프라**: DevOps, CI/CD 파이프라인, 배포 자동화 기여
+- **프로토콜 개발**: Nim, Go, Rust를 사용한 핵심 프로토콜 구현 기여
+- **스마트 계약**: Solidity, EVM, Wasm을 사용한 Logos 생태계의 스마트 계약 구축 및 감사
 
 <br />
 
-## Development Process
+## 시작하는 방법
 
-- Fork the repository and create a feature branch
-- Write clean, well-documented code following our style guidelines
-- Include comprehensive tests for new features
-- Submit a pull request with a clear description of changes
-- Respond to code review feedback promptly
-- Ensure CI/CD checks pass before merging
+1. **코드베이스 둘러보기**: [GitHub 리포지토리](https://github.com/logos-co)에서 프로젝트 구조를 파악하세요.
+2. **개발 환경 설정**: 각 리포지토리의 README 안내를 따르세요.
+3. **'Good First Issue' 찾아보기**: "good first issue" 또는 "help wanted" 라벨이 붙은 이슈를 찾아 참여하세요.
+4. **개발자 토론 참여**: Discord #hq 채널의 기술 토론에 참여하세요.
+
+<br />
+
+## 개발 프로세스
+
+- 리포지토리를 포크(fork)하여 기능 브랜치(feature branch)를 생성합니다.
+- 스타일 가이드에 따라 깨끗하고 문서화가 잘 된 코드를 작성합니다.
+- 새로운 기능에는 포괄적인 테스트를 포함해야 합니다.
+- 변경 사항에 대한 명확한 설명과 함께 풀 리퀘스트(Pull Request)를 제출합니다.
+- 코드 리뷰 피드백에 신속하게 응답합니다.
+- 병합(merge) 전 CI/CD 검사를 통과해야 합니다.
