--- a/content/resources/ko/index.mdx
+++ b/content/resources/ko/index.mdx
@@ -1,28 +1,26 @@
 ---
-title: 로고스 기술
-description: 자율적인 디지털 영토를 위한 주권적 분산 기술 스택.
+title: Logos 기술
+description: 자율적 디지털 영토를 위한 주권적 탈중앙 기술 스택
 locale: ko
 ---
 
-로고스는 자율적인 디지털 영토(임시 자율 구역, 메타 안식처, 사이버국가, 또는 최근의 네트워크 상태라고도 불림)의 잠재적 사이퍼펑크 비전을 실현하는 주권적 분산 기술 스택입니다. 토르와 I2P와 같은 전통적인 사이퍼스페이스가 익명 통신 네트워크를 통해 "야생"을 만들었다면, 로고스는 프라이버시 보존 블록체인 합의를 통해 내부적 다원성을 추가합니다.
+Logos는 임시 자치 구역, 메타 헤이븐, 사이버 국가, 또는 최근에는 네트워크 국가로 불리는 자율적 디지털 영토에 대한 사이퍼펑크의 비전을 실현하는 주권적 탈중앙 기술 스택입니다. Tor나 I2P와 같은 전통적 사이퍼스페이스가 익명 통신망을 통해 '미개척지'를 만들었다면, Logos는 프라이버시를 보존하는 블록체인 합의를 통해 그 안에 다원적 질서를 더합니다.
 
-이러한 조합은 사이버스페이스에서 새로운 종류의 영토를 확립합니다: 누구에게나, 어디서나 안정적이고 부패 저항적인 기관을 배포할 수 있는 초법적 "사이퍼스테이트"입니다.
+이 조합은 사이버 공간에 새로운 유형의 영토, 즉 누구에게나 어디서든 안정적이고 부패에 강한 제도를 배포할 수 있는 초국가적 '사이버 국가'를 창조합니다.
 
-시스템의 기술적 기반은 초기에 세 가지 기존 핵심 프로토콜을 결합하는 하이브리드 마이크로커널-마이크로서비스 아키텍처입니다:
+시스템의 기술 기반은 다음 세 가지 핵심 프로토콜을 결합한 하이브리드 마이크로커널-마이크로서비스 아키텍처입니다.
 
-- **통신**: 국가-적대자 저항적 메시징을 위한 익명 통신 네트워크
-
-- **저장소**: 강제 저항적, 지속적인 데이터, 파일 공유 및 애플리케이션 배포를 위한 분산 저장소
-
+- **통신**: 국가 수준의 감시에도 저항하는 익명 통신 네트워크
+- **저장소**: 강압에 저항하며 영속적인 데이터, 파일 공유, 애플리케이션 배포를 지원하는 탈중앙 저장소
 - **블록체인**: 주권적 질서와 거버넌스를 위한 프라이버시 보존 블록체인
 
-애플리케이션은 자체 설명 RDF-star 데이터 형식을 사용하여 통신하며, 노드가 프라이버시를 유지하면서 동적으로 모듈을 발견하고 로드할 수 있게 합니다. 이 플러그인 기반 아키텍처는 네트워크가 진화하고 적응할 수 있게 하여, 개인부터 시민사회 조직, 국가까지 당사자 간의 합의를 위한 공정한 매체를 만듭니다.
+애플리케이션은 자체 서술적인 RDF-star 데이터 형식을 사용하여 통신하므로, 노드는 프라이버시를 유지하며 동적으로 모듈을 발견하고 로드할 수 있습니다. 이러한 플러그인 기반 아키텍처는 네트워크의 진화와 적응을 가능하게 하여, 개인부터 시민 사회 단체, 국가에 이르기까지 다양한 주체 간 합의를 위한 공정한 매개체를 제공합니다.
 
-이 아키텍처는 경쟁적 거버넌스를 가능하게 하며, 기관은 실제로 사람들의 삶을 개선함으로써 지원을 받아야 합니다. 최대 프라이버시 보존과 런타임 구성 가능성을 결합함으로써, 시민사회의 하향식 또는 국가 행위자의 상향식 배포에 관계없이 포착과 부패에 저항하는 평행 기관의 기반을 제공합니다.
+이 아키텍처는 기관이 실제로 사람들의 삶을 개선해야만 지지를 얻을 수 있는 경쟁적 거버넌스를 가능하게 합니다. 극대화된 프라이버시 보존과 런타임 구성 가능성을 결합하여, 시민 사회의 상향식 배포든 국가의 하향식 배포든, 외부 개입과 부패에 저항하는 병렬 사회 제도의 기반을 마련합니다.
 
-오픈소스 프로젝트로서 로고스는 단순한 개인들의 모음이 아닙니다. 우리는 공유된 도전을 해결하고, 원칙을 발전시키며, 개방적 기여를 통해 전체에 이익이 되는 시스템을 만들기 위해 선택에 의해 함께 모입니다.
+오픈소스 프로젝트인 Logos는 단순한 개인 기여자의 모임이 아닙니다. 우리는 공동의 과제를 해결하고, 우리의 원칙을 발전시키며, 개방적 기여를 통해 모두에게 이익이 되는 시스템을 만들기 위해 자발적으로 함께합니다.
 
-더 깊이 살펴보려면 우리의 코드를 살펴보세요.
+더 깊이 알아보고 싶다면, 저희 코드를 직접 확인해보세요.
 
 <br />
 <br />
@@ -32,5 +30,5 @@ locale: ko
   target="_blank"
   className="cursor-pointer border border-black px-4 py-2 text-black"
 >
-  <span>개발자들과 함께하기</span>
+  <span>GitHub에서 코드 보기</span>
 </a>
