feat(contribution-guides): add 'For Activists' section to English, French, and Korean contribution guides to enhance community engagement

--- a/content/resources/en/how-to-contribute.mdx
+++ b/content/resources/en/how-to-contribute.mdx
@@ -10,6 +10,7 @@ To get started, you can submit your ideas or projects through the [proposal form
 
 You can also explore tailored guides on how to contribute based on your skills:
 
+- [For Activists](/resources/activists)
 - [For Developers](/resources/developers)
 - [For Writers](/resources/writers)
 - [For Event Organisers](/resources/event-organisers)
