--- a/content/resources/ko/activists.mdx
+++ b/content/resources/ko/activists.mdx
@@ -1,7 +1,7 @@
 ---
 title: For Activists
 description: A guide to contributing to Logos as an activist.
-locale: en
+locale: ko
 ---
 
 Activists play a crucial role in Logos. You help translate decentralised technology into real-world impact, empower communities, identify threats to civil liberties, and create local strategies that advance autonomy and freedom.
