--- a/content/resources/fr/activists.mdx
+++ b/content/resources/fr/activists.mdx
@@ -1,52 +1,95 @@
 ---
-title: For Activists
-description: A guide to contributing to Logos as an activist.
-locale: en
+
+title: Pour les Activistes
+
+description: Un guide pour contribuer à Logos en tant qu'activiste.
+
+locale: fr
+
 ---
 
-Activists play a crucial role in Logos. You help translate decentralised technology into real-world impact, empower communities, identify threats to civil liberties, and create local strategies that advance autonomy and freedom.
 
-If you're interested in contributing to Logos as an activist, you can submit a proposal [via the proposal form](/proposals).
 
-<br />
+Les activistes jouent un rôle crucial au sein de Logos. Vous participez à une technologie décentralisée devant avoir un impact réel, à autonomiser les communautés, à identifier les menaces aux libertés civiles et à créer des stratégies locales qui font progresser l'autonomie et la liberté.
 
-## Attend a Circle IRL or Start One
 
-- Join a Logos Circle in your city to connect with other organisers, technologists, artists, and researchers.
 
-- If there isn’t one near you, you can apply to start a Circle and receive support with
-  - onboarding
-  - event structure
-  - communication materials
-  - support on local outreach.
+Si vous souhaitez contribuer à Logos en tant qu'activiste, vous pouvez soumettre une proposition [via le formulaire de proposition](/proposals).
 
-[Find a Circle](https://luma.com/logosevents) in a city near you, or [schedule a call](https://cal.com/team/logos-onboarding/intro?overlayCalendar=true) to discuss starting a Circle.
+
 
 <br />
 
-## Contribute to Winnable Issues
+## Participer à un Cercle en personne ou en créer un
 
-Winnable issues are practical, achievable projects that directly improve people’s lives, and are developed through a Circle to ensure community ownership, local insight, and real-world impact.
 
-As an activist, you can contribute by:
 
-- Helping with research, organising, and executing the next steps
-- Coordinating volunteers
-- Connecting your issue with relevant groups, journalists, or organisations
-- Documenting progress and sharing outcomes.
+* **Rejoignez un Cercle Logos** dans votre ville pour vous connecter avec d'autres organisateurs, technologues, artistes et chercheurs.
 
-[Find winnable issues](https://contribute.logos.co/en/issues/) to contribute to.
+* **S'il n'y en a pas près de chez vous,** vous pouvez postuler pour démarrer un Cercle et recevoir du soutien pour :
+
+    * l'intégration (*onboarding*)
+
+    * la structure des événements
+
+    * les supports de communication
+
+    * l'aide pour le démarchage local.
+
+
+
+[Trouvez un Cercle](https://luma.com/logosevents) dans une ville près de chez vous, ou [planifiez un appel](https://cal.com/team/logos-onboarding/intro?overlayCalendar=true) pour discuter du lancement d'un Cercle.
+
+
 
 <br />
 
-## Follow Logos Forum Threads
+## Contribuer à des Projets Concrets (*Winnable Issues*)
 
-The Logos Forum is where Circle stewards and contributors:
 
-- share detailed updates
-- document progress
-- propose new winnable issues
-- coordinate between cities
-- post research, case studies, and ideas.
 
-[Following the forum](https://forum.logos.co/) helps you understand what's happening across the network and where your input can make the greatest impact.
+Les projets concrets sont des initiatives pratiques et réalisables qui améliorent directement la vie des gens, et sont développées par l'intermédiaire d'un Cercle afin d'assurer l'appropriation communautaire, la perspicacité locale et l'impact réel.
+
+
+
+En tant qu'activiste, vous pouvez contribuer en :
+
+
+
+* Aider à la recherche, à l'organisation et à l'exécution des prochaines étapes
+
+* Coordonner les bénévoles
+
+* Connecter votre projet à des groupes, des journalistes ou des organisations pertinentes
+
+* Documenter les progrès et partager les résultats.
+
+
+
+[Trouvez des projets concrets](https://contribute.logos.co/en/issues/) auxquels contribuer.
+
+
+
+<br />
+
+## Suivre les Fils de Discussion du Forum Logos
+
+
+
+Le Forum Logos est l'endroit où les responsables de Cercle (*Circle stewards*) et les contributeurs :
+
+
+
+* partagent des mises à jour détaillées
+
+* documentent les progrès
+
+* proposent de nouveaux enjeux gagnants
+
+* coordonnent entre les villes
+
+* publient des recherches, des études de cas et des idées.
+
+
+
+[Suivre le forum](https://forum.logos.co/) vous aide à comprendre ce qui se passe à travers le réseau et où votre contribution peut avoir le plus grand impact.
