--- a/content/resources/fr/designers.mdx
+++ b/content/resources/fr/designers.mdx
@@ -1,14 +1,25 @@
 ---
+
 title: Designers
-description: A guide to contributing to Logos as a designer.
+
+description: Un guide pour contribuer à Logos en tant que designer.
+
 locale: fr
+
 ---
 
-If you're interested in designing for Logos, you can submit a proposal via the [proposal form](/proposals).
+
+
+Si vous souhaitez concevoir pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+
+
 
 <br />
 
-- **UI/UX Design**: Create user interface designs and user experience improvements
-- **Brand Assets**: Design logos, illustrations, and marketing materials
-- **Infographics**: Create visual explanations of complex technical concepts
-- **Video Content**: Produce educational and promotional videos
+* **Design UI/UX** : Créer des designs d'interface utilisateur et des améliorations d'expérience utilisateur
+
+* **Assets de marque** : Concevoir des logos, des illustrations et du matériel marketing
+
+* **Infographies** : Créer des explications visuelles de concepts techniques complexes
+
+* **Contenu vidéo** : Produire des vidéos éducatives et promotionnelles
