--- a/content/resources/fr/developers.mdx
+++ b/content/resources/fr/developers.mdx
@@ -1,43 +1,76 @@
 ---
-title: Developers
-description: A guide to contributing to Logos as a developer.
+
+title: Développeurs
+
+description: Un guide pour contribuer à Logos en tant que développeur.
+
 locale: fr
+
 ---
 
-Logos is a passionately open-source, value-aligned community that is the product of our collective efforts. We build, learn, experiment, and succeed together.
 
-As an open-source project, Logos is not just a collection of individual contributors – it’s a civic body. We organise voluntarily to solve problems, uphold values, and build institutions that serve the common good: individual freedom and collective prosperity.
 
-Our culture is based on meritocracy, shared ownership, common responsibility, and transparent governance. Contributions to the community – code, content, ideas – are recognised and rewarded through roles that enable deeper participation in the network.
+Logos est une communauté *open source*, passionnée et alignée sur des valeurs, issue de nos efforts collectifs. Nous construisons, apprenons, expérimentons et réussissons ensemble.
 
-If you're interested in contributing to Logos as a developer, you can submit a proposal via the [proposal form](/proposals).
 
-<br />
 
-## Code Contributions
+En tant que projet *open source*, Logos n'est pas seulement un ensemble de contributeurs individuels — c'est un corps civique. Nous nous organisons volontairement pour résoudre des problèmes, faire respecter des valeurs et bâtir des institutions qui servent le bien commun : la liberté individuelle et la prospérité collective. Notre culture repose sur la méritocratie, la propriété partagée, la responsabilité commune et la gouvernance transparente. Les contributions à la communauté — code, contenu, idées — sont reconnues et récompensées par des rôles permettant une participation plus active au réseau.
 
-- **Frontend Development**: Build user interfaces using React, TypeScript, and modern web technologies
-- **Mobile Development**: Develop mobile applications for iOS and Android
-- **Infrastructure**: Contribute to DevOps, CI/CD pipelines, and deployment automation
-- **Protocol Development**: Contribute to core protocol implementations in Nim, Go, or Rust
-- **Smart Contracts**: Help build and audit Logos-based contracts for the Logos ecosystem in Solidity, EVM, or Wasm
+
+
+Si vous souhaitez contribuer à Logos en tant que développeur, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+
+
 
 <br />
 
-## Getting Started
+## Contributions de Code
 
-1. **Explore the Codebase**: Browse our [GitHub repositories](https://github.com/logos-co) to understand the project structure
-2. **Set Up Development Environment**: Follow the README instructions in each repository
-3. **Find Good First Issues**: Look for issues labeled "good first issue" or "help wanted"
-4. **Join Developer Discussions**: Participate in technical discussions on our Discord #hq channels
+
+
+* **Développement Frontend** : Construire des interfaces utilisateur avec React, TypeScript et les technologies web modernes
+
+* **Développement Mobile** : Développer des applications mobiles pour iOS et Android
+
+* **Infrastructure** : Contribuer au DevOps, aux pipelines CI/CD et à l'automatisation du déploiement
+
+* **Développement de Protocole** : Contribuer aux implémentations de protocole de base en Nim, Go ou Rust
+
+* **Contrats Intelligents (*Smart Contracts*)** : Aider à construire et auditer des contrats basés sur Logos pour l'écosystème Logos en Solidity, EVM ou Wasm
+
+
 
 <br />
 
-## Development Process
+## Pour Commencer
 
-- Fork the repository and create a feature branch
-- Write clean, well-documented code following our style guidelines
-- Include comprehensive tests for new features
-- Submit a pull request with a clear description of changes
-- Respond to code review feedback promptly
-- Ensure CI/CD checks pass before merging
+
+
+1. **Explorer la Base de Code** : Parcourez nos [répertoires GitHub](https://github.com/logos-co) pour comprendre la structure du projet
+
+2. **Configurer l'Environnement de Développement** : Suivez les instructions du README dans chaque répertoire
+
+3. **Trouver les Premiers Enjeux** : Cherchez les enjeux étiquetés « good first issue » ou « help wanted »
+
+4. **Rejoindre les Discussions des Développeurs** : Participer aux discussions techniques sur nos canaux Discord #hq
+
+
+
+<br />
+
+## Processus de Développement
+
+
+
+* Dupliquer le dépôt (*fork*) et créer une branche de fonctionnalité (*feature branch*)
+
+* Écrire du code propre et bien documenté en suivant nos directives de style
+
+* Inclure des tests complets pour les nouvelles fonctionnalités
+
+* Soumettre une requête de tirage (*pull request*) avec une description claire des changements
+
+* Répondre rapidement aux commentaires de la revue de code
+
+* S’assurer que les vérifications CI/CD réussissent avant la fusion
+
