--- a/content/resources/fr/how-to-contribute.mdx
+++ b/content/resources/fr/how-to-contribute.mdx
@@ -1,18 +1,40 @@
 ---
-title: How to contribute
-description: A guide to contributing to the Logos project.
+
+title: Comment Contribuer
+
+description: Un guide pour contribuer au projet Logos.
+
 locale: fr
+
 ---
 
-Welcome to Logos! We're thrilled to have you join us in shaping the decentralised web. Whether you're a developer, writer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
 
-To get started, you can submit your ideas or projects through the [proposal form](/proposals).
 
-You can also explore tailored guides on how to contribute based on your skills:
+Bienvenue chez Logos ! Nous sommes ravis que vous nous rejoigniez pour façonner le web décentralisé. Que vous soyez développeur, écrivain ou que vous apportiez d'autres compétences précieuses, il existe de nombreuses façons de vous impliquer et d'avoir un impact.
 
-- [For Activists](/resources/activists)
-- [For Developers](/resources/developers)
-- [For Writers](/resources/writers)
-- [For Event Organisers](/resources/event-organisers)
-- [For Translators](/resources/translators)
-- [For Designers](/resources/designers)
+
+
+Pour commencer, vous pouvez soumettre vos idées ou projets via le [formulaire de proposition](/proposals). Vous pouvez également explorer des guides personnalisés en fonction de vos compétences :
+
+
+
+* [Pour les Activistes](/resources/activists)
+
+* [Pour les Développeurs](/resources/developers)
+
+* [Pour les Écrivains](/resources/writers)
+
+* [Pour les Organisateurs d'Événements](/resources/event-organisers)
+
+* [Pour les Traducteurs](/resources/translators)
+
+* [Pour les Designers](/resources/designers)
+
+
+
+
+
+
+
+
+
