--- a/content/resources/fr/translators.mdx
+++ b/content/resources/fr/translators.mdx
@@ -1,25 +1,52 @@
 ---
-title: Translators
-description: A guide to contributing to Logos as a translator.
+
+title: Traducteurs
+
+description: Un guide pour contribuer à Logos en tant que traducteur.
+
 locale: fr
+
 ---
 
-If you're interested in translating Logos, you can submit a proposal via the [proposal form](/proposals).
+
+
+Si vous souhaitez traduire pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+
+
 
 <br />
 
-## Translation & Localization
+## Traduction et Localisation
 
-- **Documentation Translation**: Translate technical docs into your native language
-- **Website Localization**: Help localize logos.co and related sites
-- **Community Content**: Translate blog posts and educational materials
-- **UI/UX Translation**: Translate application interfaces and user guides
+
+
+* **Traduction de Documentation** : Traduire des documents techniques dans votre langue maternelle
+
+* **Localisation de Sites Web** : Aider à localiser logos.co et les sites associés
+
+* **Contenu Communautaire** : Traduire des articles de blog et du matériel éducatif
+
+* **Traduction UI/UX** : Traduire les interfaces d'application et les guides utilisateur
+
+
 
 <br />
 
-## Languages We Need:
+## Langues dont nous avons besoin
 
-- Spanish, French, German, Portuguese
-- Chinese (Simplified/Traditional), Japanese, Korean
-- Arabic, Hindi, Russian
-- And many others!
+
+
+* Espagnol, Français, Allemand, Portugais
+
+* Chinois (simplifié/traditionnel), Japonais, Coréen
+
+* Arabe, Hindi, Russe
+
+* Et bien d'autres !
+
+
+
+
+
+
+
