--- a/content/resources/fr/writers.mdx
+++ b/content/resources/fr/writers.mdx
@@ -1,26 +1,50 @@
 ---
-title: Writers
-description: A guide to contributing to Logos as a writer.
+
+title: Écrivains
+
+description: Un guide pour contribuer à Logos en tant qu'écrivain.
+
 locale: fr
+
 ---
 
-If you're interested in writing for Logos, you can submit a proposal via the [proposal form](/proposals).
+
+
+Si vous souhaitez écrire pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+
+
 
 <br />
 
-## Blog Writing for Logos Press Engine
+## Rédaction de Blog pour le Moteur de Presse Logos (*Logos Press Engine*)
 
-- **Articles**: Write about blockchain technology, decentralization, and privacy
-- **Project Updates**: Share progress updates and milestone achievements
-- **Educational Content**: Create tutorials and explainer articles for the community
-- **Industry Analysis**: Provide insights on the broader Web3 ecosystem
+
+
+* **Articles** : Écrire sur la technologie blockchain, la décentralisation et la confidentialité
+
+* **Mises à jour de projet** : Partager les progrès et les étapes franchies
+
+* **Contenu éducatif** : Créer des tutoriels et des articles explicatifs pour la communauté
+
+* **Analyse de l'industrie** : Fournir des éclairages sur l'écosystème Web3 au sens large
+
+
 
 <br />
 
-## Submission Process:
+## Processus de soumission
 
-1. Pitch your article idea via the contact form
-2. Include a brief outline and target audience
-3. Articles should be 800-2000 words with proper citations
-4. Follow our editorial guidelines for tone and style
-5. After review, the article will be published on press.logos.co
+
+
+1. Proposer votre idée d'article via le formulaire de proposition
+
+2. Inclure un bref aperçu (*outline*) et le public cible
+
+3. Les articles doivent comporter 800 à 2000 mots avec des citations appropriées
+
+4. Suivre nos directives éditoriales concernant le ton et le style
+
+5. Après examen, l'article sera publié sur press.logos.co
+
+
+
