--- a/content/resources/en/index.mdx
+++ b/content/resources/en/index.mdx
@@ -1,28 +1,36 @@
 ---
-title: Logos Technology
-description: A sovereign decentralised technology stack for autonomous digital territories.
+title: Logos
+description: A sovereign decentralised technology stack and social movement to revitalise civil society.
 locale: en
 ---
 
-Logos is a sovereign decentralised technology stack that realises the latent cypherpunk vision of autonomous digital territories, also referred to as temporary autonomous zones, meta-havens, cyberstates, or more recently network states. While traditional cypherspaces like Tor and I2P created “wilderness” through anonymous communication networks, Logos adds an internal plurality of orders through privacy-preserving blockchain consensus.
+Logos is a social movement that aims to revitalise civil society. We build, maintain, and deploy tools for civil organising on a decentralised, peer-to-peer technology stack. These tools enable us to experiment and cooperate, solving real issues and improving our own lives where legacy counterparts have failed us. 
 
-This combination establishes a new kind of territory in cyberspace: a supra-jurisdictional “cypherstate” that can deploy stable, corruption-resistant institutions to anyone, anywhere.
+Passionately open source, we thrive only through the voluntary contributions of those who share our values. If that’s you, please contribute your skills, knowledge, and ideas to the movement via Logos Contribute. 
 
-The system's technical foundation is a hybrid microkernel-microservices architecture that initially combines three existing core protocols:
+# Logos technologies
 
-- **Communication**: Anonymous communication networks for state-adversary-resistant messaging
+Logos is a complete technology stack that provides all the infrastructure needed to deploy truly decentralised applications. The system's technical foundation is a hybrid microkernel-microservices architecture that initially combines three existing core protocols:
 
-- **Storage**: Decentralised storage for coercion-resistant, persistent data, filesharing, and application distribution
+- **Blockchain**: robust privacy guarantees defend the sovereignty of users and network operators. 
 
-- **Blockchain**: Privacy-preserving blockchain for sovereign order and governance
+- **Messaging**: peer-to-peer messaging protocols protect the right to communicate without surveillance or censorship.
 
-Applications communicate using self-describing RDF-star data formats, enabling nodes to dynamically discover and load modules while maintaining privacy. This plugin-based architecture allows the network to evolve and adapt, creating an impartial medium for agreements between parties, from individuals to civil society organisations to nation states.
+- **Storage**: decentralised storage protocols support applications and robust archiving without the vulnerabilities of centralised infrastructure.
 
-The architecture enables competitive governance, where institutions must earn support by actually improving people’s lives. By combining maximal privacy preservation with runtime composability, it provides a foundation for parallel institutions that remain resistant to capture and corruption – whether deployed bottom-up by civil society or top-down by state actors.
+Applications deployed on Logos communicate using self-describing RDF-star data formats, enabling nodes to dynamically discover and load modules while maintaining privacy. This plugin-based architecture allows the network to evolve and adapt, creating an impartial medium for agreements between parties, from individuals to civil society organisations and nation states.
 
-As an open-source project, Logos is not just a collection of individuals. We come together by choice to address shared challenges, advance our principles, and create systems that benefit the whole through open contributions.
+By combining maximal privacy preservation with runtime composability, Logos provides a foundation for parallel social, financial, and political institutions that remain resistant to capture and corruption. This architecture enables competitive governance, where institutions must earn support by actually improving people’s lives. 
 
-For a deeper look, dive into our code.
+All Logos technologies are open source and built as a community. We invite developers to contribute code to strengthen these technologies and build tools to promote freedom and novel modes of cooperation on the Logos stack. 
+
+# The Logos movement
+
+Logos technologies exist to improve the lives of real people that existing systems have routinely failed. A passionate, aligned social movement is responsible for building and maintaining the technology stack, as well as deploying tools built on it in local communities worldwide. 
+
+The technologies we build find real-world applications through the Logos Circles initiative. Logos Circles are groups of individuals who identify issues facing local communities worldwide and work together to address them. Circles are an experiment in parallel organising, and they empower individuals by restoring agency, trust, and civic power. The initiative is central to our effort to restore civil society. 
+
+We invite anyone who believes that real change is possible through grassroots organising and civil initiatives to join or form a Logos Circle in their community. 
 
 <br />
 <br />
