--- a/content/resources/en/developers.mdx
+++ b/content/resources/en/developers.mdx
@@ -6,7 +6,7 @@ locale: en
 
 Logos is a passionately open-source, value-aligned community that is the product of our collective efforts. We build, learn, experiment, and succeed together.
 
-As an open-source project, Logos is not just a collection of individual contributors – it’s a civic body. We organise voluntarily to solve problems, uphold values, and build institutions that serve the common good: individual freedom and collective prosperity.
+As an open-source project, Logos is not just a collection of individual contributors; it’s a civic body. We organise voluntarily to solve problems, uphold values, and build institutions that serve the common good, individual freedom, and collective prosperity.
 
 Our culture is based on meritocracy, shared ownership, common responsibility, and transparent governance. Contributions to the community – code, content, ideas – are recognised and rewarded through roles that enable deeper participation in the network.
 
@@ -14,26 +14,26 @@ If you're interested in contributing to Logos as a developer, you can submit a p
 
 <br />
 
-## Code Contributions
+## Code contributions
 
-- **Frontend Development**: Build user interfaces using React, TypeScript, and modern web technologies
-- **Mobile Development**: Develop mobile applications for iOS and Android
+- **Frontend development**: Build user interfaces using React, TypeScript, and modern web technologies
+- **Mobile development**: Develop mobile applications for iOS and Android
 - **Infrastructure**: Contribute to DevOps, CI/CD pipelines, and deployment automation
-- **Protocol Development**: Contribute to core protocol implementations in Nim, Go, or Rust
-- **Smart Contracts**: Help build and audit Logos-based contracts for the Logos ecosystem in Solidity, EVM, or Wasm
+- **Protocol development**: Contribute to core protocol implementations in Nim, Go, or Rust
+- **Smart contracts**: Help build and audit Logos-based contracts for the Logos ecosystem in Solidity, EVM, or Wasm
 
 <br />
 
-## Getting Started
+## Getting started
 
-1. **Explore the Codebase**: Browse our [GitHub repositories](https://github.com/logos-co) to understand the project structure
-2. **Set Up Development Environment**: Follow the README instructions in each repository
-3. **Find Good First Issues**: Look for issues labeled "good first issue" or "help wanted"
-4. **Join Developer Discussions**: Participate in technical discussions on our Discord #hq channels
+1. **Explore the codebase**: Browse our [GitHub repositories](https://github.com/logos-co) to understand the project structure
+2. **Set up development environment**: Follow the README instructions in each repository
+3. **Find good first issues**: Look for issues labeled "good first issue" or "help wanted"
+4. **Join developer discussions**: Participate in technical discussions on our Discord #hq channels
 
 <br />
 
-## Development Process
+## Development process
 
 - Fork the repository and create a feature branch
 - Write clean, well-documented code following our style guidelines
