--- a/content/resources/en/designers.mdx
+++ b/content/resources/en/designers.mdx
@@ -6,7 +6,7 @@ locale: en
 
 If you're interested in designing for Logos, you can submit a proposal via the [proposal form](/proposals).
 
-- **UI/UX Design**: Create user interface designs and user experience improvements
-- **Brand Assets**: Design logos, illustrations, and marketing materials
+- **UI/UX design**: Create user interface designs and user experience improvements
+- **Brand assets**: Design logos, illustrations, and marketing materials
 - **Infographics**: Create visual explanations of complex technical concepts
-- **Video Content**: Produce educational and promotional videos
+- **Video content**: Produce educational and promotional videos
