--- a/content/resources/en/how-to-contribute.mdx
+++ b/content/resources/en/how-to-contribute.mdx
@@ -4,15 +4,15 @@ description: A guide to contributing to the Logos project.
 locale: en
 ---
 
-Welcome to Logos! We're thrilled to have you join us in shaping the decentralised web. Whether you're a developer, writer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
+Welcome to Logos! We're thrilled to have you join us in shaping the decentralised web. Whether you're a developer, writer, designer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
 
 To get started, you can submit your ideas or projects through the [proposal form](/proposals).
 
 You can also explore tailored guides on how to contribute based on your skills:
 
-- [For Activists](/resources/activists)
-- [For Developers](/resources/developers)
-- [For Writers](/resources/writers)
-- [For Event Organisers](/resources/event-organisers)
-- [For Translators](/resources/translators)
-- [For Designers](/resources/designers)
+- [To contribute to local grassroots initiatives](/resources/activists)
+- [For developers](/resources/developers)
+- [For writers](/resources/writers)
+- [For event organisers](/resources/event-organisers)
+- [For translators](/resources/translators)
+- [For designers](/resources/designers)
