--- a/content/resources/en/translators.mdx
+++ b/content/resources/en/translators.mdx
@@ -8,18 +8,18 @@ If you're interested in translating Logos, you can submit a proposal via the [pr
 
 <br />
 
-## Translation & Localisation
+# Translation and localisation
 
-- **Documentation Translation**: Translate technical docs into your native language
-- **Website Localisation**: Help localise logos.co and related sites
-- **Community Content**: Translate blog posts and educational materials
-- **UI/UX Translation**: Translate application interfaces and user guides
+- **Documentation translation**: Translate technical docs into your native language
+- **Website localisation**: Help localise logos.co and related sites
+- **Community content**: Translate blog posts and educational materials
+- **UI/UX translation**: Translate application interfaces and user guides
 
 <br />
 
-## Languages We Need:
+# Languages we need:
 
 - Spanish, French, German, Portuguese
-- Chinese (Simplified/Traditional), Japanese, Korean
+- Chinese (simplified/traditional), Japanese, Korean
 - Arabic, Hindi, Russian
-- And many others!
+- And many others.
