--- a/content/resources/en/writers.mdx
+++ b/content/resources/en/writers.mdx
@@ -8,16 +8,16 @@ If you're interested in writing for Logos, you can submit a proposal via the [pr
 
 <br />
 
-## Blog Writing for Logos Press Engine
+# Blog writing for Logos Press Engine
 
 - **Articles**: Write about blockchain technology, decentralisation, and privacy
-- **Project Updates**: Share progress updates and milestone achievements
-- **Educational Content**: Create tutorials and explainer articles for the community
-- **Industry Analysis**: Provide insights on the broader Web3 ecosystem
+- **Project updates**: Share progress updates and milestone achievements
+- **Educational content**: Create tutorials and explainer articles for the community
+- **Industry analysis**: Provide insights on the broader web3 ecosystem
 
 <br />
 
-## Submission Process:
+# Submission process:
 
 1. Pitch your article idea via the contact form
 2. Include a brief outline and target audience
