--- a/content/resources/en/developers.mdx
+++ b/content/resources/en/developers.mdx
@@ -14,7 +14,7 @@ If you're interested in contributing to Logos as a developer, you can submit a p
 
 <br />
 
-## Code contributions
+# Code contributions
 
 - **Frontend development**: Build user interfaces using React, TypeScript, and modern web technologies
 - **Mobile development**: Develop mobile applications for iOS and Android
@@ -24,7 +24,7 @@ If you're interested in contributing to Logos as a developer, you can submit a p
 
 <br />
 
-## Getting started
+# Getting started
 
 1. **Explore the codebase**: Browse our [GitHub repositories](https://github.com/logos-co) to understand the project structure
 2. **Set up development environment**: Follow the README instructions in each repository
@@ -33,7 +33,7 @@ If you're interested in contributing to Logos as a developer, you can submit a p
 
 <br />
 
-## Development process
+# Development process
 
 - Fork the repository and create a feature branch
 - Write clean, well-documented code following our style guidelines
