--- a/content/resources/en/event-organisers.mdx
+++ b/content/resources/en/event-organisers.mdx
@@ -8,7 +8,7 @@ If you're interested in organising events for Logos, you can submit a proposal v
 
 <br />
 
-## Community events and Circles
+# Community events and Circles
 
 - **Host local meetups**: Organise Logos community gatherings in your city
 - **Online workshops**: Conduct educational sessions about decentralisation
@@ -17,7 +17,7 @@ If you're interested in organising events for Logos, you can submit a proposal v
 
 <br />
 
-## Event planning support:
+# Event planning support:
 
 - Marketing materials and swag provided
 - Technical speakers can be arranged
