fix(resources/fr): md format

--- a/content/resources/fr/activists.mdx
+++ b/content/resources/fr/activists.mdx
@@ -1,95 +1,53 @@
 ---
-
 title: Pour les Activistes
-
 description: Un guide pour contribuer à Logos en tant qu'activiste.
-
 locale: fr
-
 ---
-
-
 
 Les activistes jouent un rôle crucial au sein de Logos. Vous participez à une technologie décentralisée devant avoir un impact réel, à autonomiser les communautés, à identifier les menaces aux libertés civiles et à créer des stratégies locales qui font progresser l'autonomie et la liberté.
 
-
-
 Si vous souhaitez contribuer à Logos en tant qu'activiste, vous pouvez soumettre une proposition [via le formulaire de proposition](/proposals).
-
-
 
 <br />
 
-## Participer à un Cercle en personne ou en créer un
+# Participer à un Cercle en personne ou en créer un
 
+Rejoignez un Cercle Logos dans votre ville pour vous connecter avec d'autres organisateurs, technologues, artistes et chercheurs.
 
+S'il n'y en a pas près de chez vous, vous pouvez postuler pour démarrer un Cercle et recevoir du soutien pour :
 
-* **Rejoignez un Cercle Logos** dans votre ville pour vous connecter avec d'autres organisateurs, technologues, artistes et chercheurs.
-
-* **S'il n'y en a pas près de chez vous,** vous pouvez postuler pour démarrer un Cercle et recevoir du soutien pour :
-
-    * l'intégration (*onboarding*)
-
-    * la structure des événements
-
-    * les supports de communication
-
-    * l'aide pour le démarchage local.
-
-
+- l'intégration (_onboarding_)
+- la structure des événements
+- les supports de communication
+- l'aide pour le démarchage local.
 
 [Trouvez un Cercle](https://luma.com/logosevents) dans une ville près de chez vous, ou [planifiez un appel](https://cal.com/team/logos-onboarding/intro?overlayCalendar=true) pour discuter du lancement d'un Cercle.
 
-
-
 <br />
 
-## Contribuer à des Projets Concrets (*Winnable Issues*)
-
-
+# Contribuer à des Projets Concrets (_Winnable Issues_)
 
 Les enjeux gagnants sont des initiatives pratiques et réalisables qui améliorent directement la vie des gens, et sont développées par l'intermédiaire d'un Cercle afin d'assurer l'appropriation communautaire, la perspicacité locale et l'impact réel.
 
-
-
 En tant qu'activiste, vous pouvez contribuer en :
 
-
-
-* Aider à la recherche, à l'organisation et à l'exécution des prochaines étapes
-
-* Coordonner les bénévoles
-
-* Connecter votre projet à des groupes, des journalistes ou des organisations pertinentes
-
-* Documenter les progrès et partager les résultats.
-
-
+- Aider à la recherche, à l'organisation et à l'exécution des prochaines étapes
+- Coordonner les bénévoles
+- Connecter votre projet à des groupes, des journalistes ou des organisations pertinentes
+- Documenter les progrès et partager les résultats.
 
 [Trouvez des projets concrets](https://contribute.logos.co/en/issues/) auxquels contribuer.
 
-
-
 <br />
 
-## Suivre les Fils de Discussion du Forum Logos
+# Suivre les Fils de Discussion du Forum Logos
 
+Le Forum Logos est l'endroit où les responsables de Cercle (_Circle stewards_) et les contributeurs :
 
-
-Le Forum Logos est l'endroit où les responsables de Cercle (*Circle stewards*) et les contributeurs :
-
-
-
-* partagent des mises à jour détaillées
-
-* documentent les progrès
-
-* proposent de nouveaux enjeux gagnants
-
-* se coordonnent entre villes
-
-* publient des recherches, des études de cas et des idées.
-
-
+- partagent des mises à jour détaillées
+- documentent les progrès
+- proposent de nouveaux enjeux gagnants
+- se coordonnent entre villes
+- publient des recherches, des études de cas et des idées.
 
 [Suivre le forum](https://forum.logos.co/) vous aide à comprendre ce qui se passe à travers le réseau et où votre contribution peut avoir le plus grand impact.
