--- a/content/resources/fr/designers.mdx
+++ b/content/resources/fr/designers.mdx
@@ -1,25 +1,12 @@
 ---
-
 title: Designers
-
 description: Un guide pour contribuer à Logos en tant que designer.
-
 locale: fr
-
 ---
-
-
 
 Si vous souhaitez concevoir pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
 
-
-
-<br />
-
-* **Design UI/UX** : Créer des designs d'interface utilisateur et des améliorations d'expérience utilisateur
-
-* **Assets de marque** : Concevoir des logos, des illustrations et du matériel marketing
-
-* **Infographies** : Créer des explications visuelles de concepts techniques complexes
-
-* **Contenu vidéo** : Produire des vidéos éducatives et promotionnelles
+- **Design UI/UX** : Créer des designs d'interface utilisateur et des améliorations d'expérience utilisateur
+- **Assets de marque** : Concevoir des logos, des illustrations et du matériel marketing
+- **Infographies** : Créer des explications visuelles de concepts techniques complexes
+- **Contenu vidéo** : Produire des vidéos éducatives et promotionnelles
