--- a/content/resources/fr/event-organisers.mdx
+++ b/content/resources/fr/event-organisers.mdx
@@ -1,52 +1,25 @@
 ---
-
 title: Organisateurs d'Événements
-
 description: Un guide pour contribuer à Logos en tant qu'organisateur d'événements.
-
 locale: fr
-
 ---
-
-
 
 Si vous souhaitez organiser des événements pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
 
+<br />
 
+# Événements Communautaires et Cercles
+
+- **Organiser des Rencontres Locales (_Meetups_)** : Organiser des rassemblements communautaires Logos dans votre ville
+- **Ateliers en Ligne** : Animer des sessions éducatives sur la décentralisation
+- **Représentation à des Conférences** : Représenter Logos lors de conférences sur la blockchain et la décentralisation
+- **Événements de Partenariat** : Collaborer avec d'autres projets Web3 pour des événements conjoints
 
 <br />
 
-## Événements Communautaires et Cercles
+# Soutien à la planification d’événements
 
-
-
-* **Organiser des Rencontres Locales (*Meetups*)** : Organiser des rassemblements communautaires Logos dans votre ville
-
-* **Ateliers en Ligne** : Animer des sessions éducatives sur la décentralisation
-
-* **Représentation à des Conférences** : Représenter Logos lors de conférences sur la blockchain et la décentralisation
-
-* **Événements de Partenariat** : Collaborer avec d'autres projets Web3 pour des événements conjoints
-
-
-
-<br />
-
-## Soutien à la planification d’événements
-
-
-
-* Matériel marketing et cadeaux promotionnels (*swag*) fournis
-
-* Des conférenciers techniques peuvent être mis à disposition
-
-* Soutien budgétaire disponible pour les événements admissibles
-
-* Rapports post-événement et retour d'information de la communauté
-
-
-
-
-
-
-
+- Matériel marketing et cadeaux promotionnels (_swag_) fournis
+- Des conférenciers techniques peuvent être mis à disposition
+- Soutien budgétaire disponible pour les événements admissibles
+- Rapports post-événement et retour d'information de la communauté
