--- a/content/resources/fr/writers.mdx
+++ b/content/resources/fr/writers.mdx
@@ -1,50 +1,26 @@
 ---
-
 title: Écrivains
-
 description: Un guide pour contribuer à Logos en tant qu'écrivain.
-
 locale: fr
-
 ---
-
-
 
 Si vous souhaitez écrire pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
 
+<br />
 
+# Rédaction de Blog pour le Moteur de Presse Logos (_Logos Press Engine_)
+
+- **Articles** : Écrire sur la technologie blockchain, la décentralisation et la confidentialité
+- **Mises à jour de projet** : Partager les progrès et les étapes franchies
+- **Contenu éducatif** : Créer des tutoriels et des articles explicatifs pour la communauté
+- **Analyse de l'industrie** : Fournir des éclairages sur l'écosystème Web3 au sens large
 
 <br />
 
-## Rédaction de Blog pour le Moteur de Presse Logos (*Logos Press Engine*)
-
-
-
-* **Articles** : Écrire sur la technologie blockchain, la décentralisation et la confidentialité
-
-* **Mises à jour de projet** : Partager les progrès et les étapes franchies
-
-* **Contenu éducatif** : Créer des tutoriels et des articles explicatifs pour la communauté
-
-* **Analyse de l'industrie** : Fournir des éclairages sur l'écosystème Web3 au sens large
-
-
-
-<br />
-
-## Processus de soumission
-
-
+# Processus de soumission
 
 1. Proposer votre idée d'article via le formulaire de proposition
-
-2. Inclure un bref aperçu (*outline*) et le public cible
-
+2. Inclure un bref aperçu (_outline_) et le public cible
 3. Les articles doivent comporter 800 à 2000 mots avec des citations appropriées
-
 4. Suivre nos directives éditoriales concernant le ton et le style
-
 5. Après examen, l'article sera publié sur press.logos.co
-
-
-
