--- a/content/resources/fr/developers.mdx
+++ b/content/resources/fr/developers.mdx
@@ -1,61 +1,43 @@
 ---
-
 title: Développeurs
-
 description: Un guide pour contribuer à Logos en tant que développeur.
-
 locale: fr
-
 ---
 
+Logos est une communauté _open source_, passionnée et alignée sur des valeurs, issue de nos efforts collectifs. Nous construisons, apprenons, expérimentons et réussissons ensemble.
 
+En tant que projet _open source_, Logos n'est pas seulement un ensemble de contributeurs individuels — c'est un corps civique. Nous nous organisons volontairement pour résoudre des problèmes, faire respecter des valeurs et bâtir des institutions qui servent le bien commun : la liberté individuelle et la prospérité collective.
 
-Logos est une communauté *open source*, passionnée et alignée sur des valeurs, issue de nos efforts collectifs. Nous construisons, apprenons, expérimentons et réussissons ensemble.
-
-
-
-En tant que projet *open source*, Logos n'est pas seulement un ensemble de contributeurs individuels — c'est un corps civique. Nous nous organisons volontairement pour résoudre des problèmes, faire respecter des valeurs et bâtir des institutions qui servent le bien commun : la liberté individuelle et la prospérité collective. Notre culture repose sur la méritocratie, la propriété partagée, la responsabilité commune et la gouvernance transparente. Les contributions à la communauté — code, contenu, idées — sont reconnues et récompensées par des rôles permettant une participation plus active au réseau.
-
-
+Notre culture repose sur la méritocratie, la propriété partagée, la responsabilité commune et la gouvernance transparente. Les contributions à la communauté — code, contenu, idées — sont reconnues et récompensées par des rôles permettant une participation plus active au réseau.
 
 Si vous souhaitez contribuer à Logos en tant que développeur, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
 
+<br />
 
+# Contributions de Code
+
+- **Développement Frontend** : Construire des interfaces utilisateur avec React, TypeScript et les technologies web modernes
+- **Développement Mobile** : Développer des applications mobiles pour iOS et Android
+- **Infrastructure** : Contribuer au DevOps, aux pipelines CI/CD et à l'automatisation du déploiement
+- **Développement de Protocole** : Contribuer aux implémentations de protocole de base en Nim, Go ou Rust
+- **Contrats Intelligents (_Smart Contracts_)** : Aider à construire et auditer des contrats basés sur Logos pour l'écosystème Logos en Solidity, EVM ou Wasm
 
 <br />
 
-## Contributions de Code
+# Pour Commencer
 
-
-
-* **Développement Frontend** : Construire des interfaces utilisateur avec React, TypeScript et les technologies web modernes
-
-* **Développement Mobile** : Développer des applications mobiles pour iOS et Android
-
-* **Infrastructure** : Contribuer au DevOps, aux pipelines CI/CD et à l'automatisation du déploiement
-
-* **Développement de Protocole** : Contribuer aux implémentations de protocole de base en Nim, Go ou Rust
-
-* **Contrats Intelligents (*Smart Contracts*)** : Aider à construire et auditer des contrats basés sur Logos pour l'écosystème Logos en Solidity, EVM ou Wasm
-
-
-
-<br />
-
-## Pour Commencer
 1. **Explorer la Base de Code** : Parcourez nos [répertoires GitHub](https://github.com/logos-co) pour comprendre la structure du projet
 2. **Configurer l'Environnement de Développement** : Suivez les instructions du README dans chaque répertoire
 3. **Trouver de bons Premiers Problèmes** : Cherchez les problèmes étiquetés « good first issue » ou « help wanted »
 4. **Rejoindre les Discussions des Développeurs** : Participer aux discussions techniques sur nos canaux Discord #hq
 
-
 <br />
 
-## Processus de Développement
-- Dupliquer le dépôt (*fork*) et créer une branche de fonctionnalité (*feature branch*)
+# Processus de Développement
+
+- Dupliquer le dépôt (_fork_) et créer une branche de fonctionnalité (_feature branch_)
 - Écrire du code propre et bien documenté en suivant nos directives de style
 - Inclure des tests complets pour les nouvelles fonctionnalités
-- Soumettre une demande de tirage (*pull request*) avec une description claire des changements
+- Soumettre une demande de tirage (_pull request_) avec une description claire des changements
 - Répondre rapidement aux commentaires de la revue de code
 - S’assurer que les vérifications CI/CD réussissent avant la fusion
-
