--- a/content/resources/fr/how-to-contribute.mdx
+++ b/content/resources/fr/how-to-contribute.mdx
@@ -1,40 +1,18 @@
 ---
-
 title: Comment Contribuer
-
 description: Un guide pour contribuer au projet Logos.
-
 locale: fr
-
 ---
-
-
 
 Bienvenue chez Logos ! Nous sommes ravis que vous nous rejoigniez pour façonner le web décentralisé. Que vous soyez développeur, écrivain ou que vous apportiez d'autres compétences précieuses, il existe de nombreuses façons de vous impliquer et d'avoir un impact.
 
+Pour commencer, vous pouvez soumettre vos idées ou projets via le [formulaire de proposition](/proposals).
 
+Vous pouvez également explorer des guides personnalisés en fonction de vos compétences :
 
-Pour commencer, vous pouvez soumettre vos idées ou projets via le [formulaire de proposition](/proposals). Vous pouvez également explorer des guides personnalisés en fonction de vos compétences :
-
-
-
-* [Pour les Activistes](/resources/activists)
-
-* [Pour les Développeurs](/resources/developers)
-
-* [Pour les Écrivains](/resources/writers)
-
-* [Pour les Organisateurs d'Événements](/resources/event-organisers)
-
-* [Pour les Traducteurs](/resources/translators)
-
-* [Pour les Designers](/resources/designers)
-
-
-
-
-
-
-
-
-
+- [Pour les Activistes](/resources/activists)
+- [Pour les Développeurs](/resources/developers)
+- [Pour les Écrivains](/resources/writers)
+- [Pour les Organisateurs d'Événements](/resources/event-organisers)
+- [Pour les Traducteurs](/resources/translators)
+- [Pour les Designers](/resources/designers)
