--- a/content/resources/fr/translators.mdx
+++ b/content/resources/fr/translators.mdx
@@ -1,52 +1,25 @@
 ---
-
 title: Traducteurs
-
 description: Un guide pour contribuer à Logos en tant que traducteur.
-
 locale: fr
-
 ---
-
-
 
 Si vous souhaitez traduire pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
 
+<br />
 
+# Traduction et Localisation
+
+- **Traduction de Documentation** : Traduire des documents techniques dans votre langue maternelle
+- **Localisation de Sites Web** : Aider à localiser logos.co et les sites associés
+- **Contenu Communautaire** : Traduire des articles de blog et du matériel éducatif
+- **Traduction UI/UX** : Traduire les interfaces d'application et les guides utilisateur
 
 <br />
 
-## Traduction et Localisation
+# Langues dont nous avons besoin
 
-
-
-* **Traduction de Documentation** : Traduire des documents techniques dans votre langue maternelle
-
-* **Localisation de Sites Web** : Aider à localiser logos.co et les sites associés
-
-* **Contenu Communautaire** : Traduire des articles de blog et du matériel éducatif
-
-* **Traduction UI/UX** : Traduire les interfaces d'application et les guides utilisateur
-
-
-
-<br />
-
-## Langues dont nous avons besoin
-
-
-
-* Espagnol, Français, Allemand, Portugais
-
-* Chinois (simplifié/traditionnel), Japonais, Coréen
-
-* Arabe, Hindi, Russe
-
-* Et bien d'autres !
-
-
-
-
-
-
-
+- Espagnol, Français, Allemand, Portugais
+- Chinois (simplifié/traditionnel), Japonais, Coréen
+- Arabe, Hindi, Russe
+- Et bien d'autres !
