feat(resources/fr): update french translation for activists page

--- a/content/resources/fr/activists.mdx
+++ b/content/resources/fr/activists.mdx
@@ -4,7 +4,7 @@ description: Un guide pour contribuer à Logos au sein de votre communauté loca
 locale: fr
 ---
 
-Les activistes jouent un rôle crucial au sein de Logos. Vous participez à une technologie décentralisée devant avoir un impact réel, à autonomiser les communautés, à identifier les menaces aux libertés civiles et à créer des stratégies locales qui font progresser l'autonomie et la liberté.
+Des personnes ordinaires jouent un rôle crucial dans Logos. Vous contribuez à transformer les technologies décentralisées en impacts réels, à donner du pouvoir aux communautés, à identifier les menaces aux libertés civiles et à créer des stratégies locales qui font progresser l’autonomie et la liberté.
 
 Si vous souhaitez contribuer à Logos au niveau local, vous pouvez soumettre une proposition [via le formulaire de proposition](/proposals).
 
