chore: update French translation

--- a/content/resources/fr/writers.mdx
+++ b/content/resources/fr/writers.mdx
@@ -1,6 +1,6 @@
 ---
-title: Écrivains
-description: Un guide pour contribuer à Logos en tant qu'écrivain.
+title: Rédacteurs
+description: Un guide pour contribuer à Logos en tant que rédacteur.
 locale: fr
 ---
 
