--- a/content/resources/fr/how-to-contribute.mdx
+++ b/content/resources/fr/how-to-contribute.mdx
@@ -4,7 +4,7 @@ description: Un guide pour contribuer au projet Logos.
 locale: fr
 ---
 
-Bienvenue chez Logos ! Nous sommes ravis que vous nous rejoigniez pour façonner le web décentralisé. Que vous soyez développeur, écrivain, designer, ou que vous apportiez d'autres compétences précieuses, il existe de nombreuses façons de vous impliquer et d'avoir un impact.
+Bienvenue chez Logos ! Nous sommes ravis que vous nous rejoigniez pour façonner le web décentralisé. Que vous soyez développeur, rédacteur, designer, ou que vous apportiez d'autres compétences précieuses, il existe de nombreuses façons de vous impliquer et d'avoir un impact.
 
 Pour commencer, vous pouvez soumettre vos idées ou projets via le [formulaire de proposition](/proposals).
 
@@ -12,7 +12,7 @@ Vous pouvez également explorer des guides personnalisés en fonction de vos com
 
 - [Pour contribuer à des initiatives locales de terrain](/resources/activists)
 - [Pour les Développeurs](/resources/developers)
-- [Pour les Écrivains](/resources/writers)
+- [Pour les Rédacteurs](/resources/writers)
 - [Pour les Organisateurs d'Événements](/resources/event-organisers)
 - [Pour les Traducteurs](/resources/translators)
 - [Pour les Designers](/resources/designers)
